# kitchen-agent

./: CHANGELOG.md  Makefile  README.md  package-lock.json  package.json  playwright.config.ts  pyproject.toml
data/: README.md  test.md  wroclaw-cnc-reviews.md  wroclaw-cnc-search.md
data/00_Fundamenty/: Standardy_Materialowe.md
data/02_Projektowanie/: 00_Algorytm_Projektowania.md  Zasady_Corpus.md
data/03_Biznes/: Marketing.md  Strategia.md
data/05_Zasoby/: filmy-stolarzy-know-how.md  slownik-pojec.md  todo.md
data/08_Szkolenia_Corpus/: backup.au3  corpus-okno-projektowe-cz1.txt
doc/: example-gemini.md  gui-principles.md  prompt-backend-tdd.md  prompt-frontend.md  sequence-actual.md  sequence-refactored-tools-disabled.md  sequence-refactored-tools-enabled.md  sequence-tools-disabled.md  sequence-tools-enabled.md
docs/: architecture-assessment.md  features.md  system-overview.md  title-feature-edge-cases.md  url-routing-implementation.md  visual-tests-plan.md
docs/specs/: architecture-diagrams.md  drag-drop-analysis.md  f002-import-export.md  f003-folder-organization.md  f01-token-tool-loop.md  frontend-diagrams.md  session-movement-analysis.md  session-state-diagrams.md  session-state-machine.md  session-states-flow.md  tool-call-lifecycle.md
e2e/: DOM-ACCESS-ANALYSIS.md  README.md
e2e/fixtures/: screenshots.ts  seed.ts
frontend/: .env.example  .prettierrc  README.md  TEST_PLAN.md  package.json  pnpm-lock.yaml
prompts/: assembly.md  base_agent_rules.md  design.md  general.md  modes.json
scripts/: README.md  backfill_turn_ids.py  browser-intercept.js  browser-seed.js  run_golden_eval.py  test_citation_compliance.py  verify_citations.py
src/: chat_service.py  config.py  dependencies.py  export_service.py  exporter.py  folder_service.py  import_service.py  logger.py  main.py  message_editor.py  message_format.py  prompt_logger.py  prompt_manager.py  protocols.py  schemas.py  serializers.py  title_generator.py  token_counter.py
tests/: conftest.py  helpers.py
(+226 files in other folders)
