[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kitchen-agent"
version = "0.1.0"
description = "Local LLM agent for kitchen cabinet design and assembly"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = {text = "MIT"}
authors = [
    {name = "Michal", email = "your.email@example.com"}
]

dependencies = [
    "anthropic>=0.105.2",
    "fastapi>=0.136.3",
    "google-genai>=0.3.0",
    "openai>=1.0.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.0.0",
    "structlog>=25.5.0",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "mypy>=1.5.0",
    "pytest>=7.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/__init__.py",
    "tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "if 0:",
    "@abstractmethod",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line too long — handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E402"]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "integration: marks tests as requiring a live Gemini API key (skipped in CI)",
]
